--- a/css/products.css
+++ b/css/products.css
@@ -52,9 +52,24 @@
         margin-left: 20px;
     }
     .p-box {
-        width: 700px;
-        height: 380px;
+        width: 100vw;
+        height: 50vh;
     }
+    
+    .product {
+    width: 100vw;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+        padding-bottom: 15vh;
+        z-index: 10000;
+}
+    
+    .slide-right {
+    display: none;
+}
+    
 }
 
 @media screen and (max-width: 800px) {
@@ -64,13 +79,27 @@
         width: 300px;
     }
     .p-box {
-        width: 500px;
-        height: 300px;
+        width: 100vw;
+        height: 50vh;
     }
 
+    .slide-right {
+    display: none;
+}
+    
     .p-img {
         width: 200px;
     }
+    
+    .product {
+    width: 100vw;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+        padding-bottom: 15vh;
+        z-index: 10000;
+}
 
 }
 
@@ -84,12 +113,14 @@
         width: 300px;
     }
     .p-box {
-        width: 300px;
-        height: 200px;
-        border-radius: 30px;
-        margin-top: 60px;
+        width: 100vw;
+        height: 50vh;
     }
 
+    .slide-right {
+    display: none;
+}
+    
     .p-img {
         width: 200px;
         border-radius: 50px;
@@ -98,5 +129,25 @@
     .sheet-3 {
         display: none;
     }
+    
+    .footer {
+        position: fixed;
+    }
+    
+    .sheet-4 {
+    position: fixed;
+    left: 0;
+    top: 50%;
+}
+    
+    .product {
+    width: 100vw;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+        padding-bottom: 15vh;
+        z-index: 10000;
+}
 
 }
